# EML-Math

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  workflow.yml
c_api/: Cargo.toml  eml_math.h  example.c
c_api/src/: lib.rs
docs/: api.html  concepts.html  flow_diagrams.md  guide.html  index.html  style.css
docs/famous_gallery/: index.html
docs/famous_gallery/flowing/: index.html
docs/famous_gallery/formal/: index.html
docs/famous_gallery/gentle/: index.html
docs/famous_gallery/gentle_tight/: index.html
docs/famous_gallery/organic/: index.html
docs/famous_gallery/tightened/: index.html
docs/famous_gallery/tree/: index.html
examples/: custom_renderer.py  custom_renderer_out.dot  famous_gallery.py  flow_diagram_quickstart.py
rust/eml_core/: Cargo.toml
rust/eml_core/src/: knot.rs  lib.rs  metric.rs  multivector.rs  octonion.rs  pair.rs  point.rs
rust/eml_core/src/discover/: expr.rs  fingerprint.rs  mod.rs  optimizer.rs  search.rs
src/eml_math/: __init__.py  constants.py  datasheet.py  discrete.py  evaluator.py  famous.py  flow.py  flow_layout.py  fourvector.py  geometric_algebra.py  metric.py  momentum.py  ndim.py  octonion.py  operators.py  pair.py  point.py  qft.py  simulation.py  state.py  symbols.py  tree.py
src/eml_math/discover/: __init__.py  compress.py  result.py  search.py
src/eml_math/extensions/: __init__.py  primes.py
src/eml_math/qm/: __init__.py  evolution.py  states.py
src/eml_math/render/: __init__.py  edges.py  layout.py  palette.py
src/eml_math/render/renderers/: __init__.py  html.py  raster.py  svg.py
src/eml_math/web/: __init__.py
tests/: conftest.py  test_axioms.py  test_complex_compression.py  test_compression_pipeline.py  test_discover.py  test_discrete.py  test_eml_2000.py  test_eml_geometry_extended.py  test_evaluator.py  test_famous.py  test_famous_roundtrip.py  test_final_coverage.py  test_flow.py  test_fourvector.py  test_geometric_algebra.py  test_get_datasheet.py  test_integration.py  test_metric.py  test_momentum.py  test_ndim.py  test_octonion.py  test_operators.py  test_operators_extended.py  test_operators_new.py  test_operators_properties.py  test_operators_trig.py  test_pair.py  test_point.py  test_point_geometry.py  test_qft.py  test_render_edges.py  test_render_layout.py  test_render_protocol.py  test_rust_batch_and_mathjax.py  test_simulation.py  test_state_extensions.py  test_symbol_and_pipeline.py  test_symbol_table.py  test_symbols.py  test_tree.py  (+1 more)
tests/qm/: test_evolution.py  test_states.py
