[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "eml-math"
version = "v0.2.0-alpha"
description = "Mirror Phase Mathematics: the EML Sheffer operator as a universal real-valued foundation for all elementary mathematics"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Andrew K Watts", email = "andrewkwatts@gmail.com" }
]
keywords = [
    "mathematics",
    "physics",
    "eml",
    "sheffer",
    "tension",
    "mirror",
    "quantum",
    "symbolic-regression",
    "formula-discovery",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "mpmath>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.9",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinxcontrib-katex",
]
ext = [
    "numpy>=1.26",
    "sympy>=1.12",
]

[project.urls]
Homepage = "https://github.com/andrewkwatts/eml"
Repository = "https://github.com/andrewkwatts/eml"
"Bug Tracker" = "https://github.com/andrewkwatts/eml/issues"

[tool.maturin]
python-source = "src"
manifest-path = "rust/eml_core/Cargo.toml"
module-name = "eml_math.eml_core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gemini: marks tests that interact with Gemini API",
]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

