[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "eml-math"
version = "1.3.0"
description = "Exp-Minus-Log Mathematics: the EML Sheffer operator eml(x,y)=exp(x)−ln(y). Slim core: expression trees, symbolic regression, flow-diagram renderer. (Algebras + GR live in the sister package eml-spectral.)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Andrew K Watts", email = "andrewkwatts@gmail.com" }
]
keywords = [
    "mathematics",
    "eml",
    "sheffer",
    "symbolic-regression",
    "formula-discovery",
    "expression-tree",
    "flow-diagram",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
precision = [
    "mpmath>=1.3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.9",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinxcontrib-katex",
]
ext = [
    "numpy>=1.26",
    "sympy>=1.12",
]

[project.urls]
Homepage = "https://github.com/andrewkwatts-maker/EML-Math"
Repository = "https://github.com/andrewkwatts-maker/EML-Math"
"Bug Tracker" = "https://github.com/andrewkwatts-maker/EML-Math/issues"
Documentation = "https://github.com/andrewkwatts-maker/EML-Math/blob/main/README.md"
"C/C++ API" = "https://github.com/andrewkwatts-maker/EML-Math/tree/main/c_api"

[tool.maturin]
python-source = "src"
manifest-path = "rust/eml_core/Cargo.toml"
module-name = "eml_math.eml_core"
features = ["pyo3/extension-module"]
include = [
    "src/eml_math/web/eml_flow.js",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gemini: marks tests that interact with Gemini API",
]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

