[package]
name = "eml_core"
version = "1.0.0"
edition = "2021"

[lib]
name = "eml_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rayon = "1.10"
dashmap = "6"
ordered-float = "4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
